Fix layout bug

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -126,8 +126,8 @@ body{
 .header-search .search-bar{
     background-color: var(--search-bar-color);
     flex: 0.5;
-    min-width: 600px;
-    min-height: 40px;
+    min-width: 100%;
+    min-height: 50%;
     display: flex;
     justify-content: space-between;
     border-radius: 5px;
@@ -170,12 +170,13 @@ body{
     font-size:28px;
 }
 .header-user .user-img{
-    min-width: 60px;
-    min-height: 60px;
+    width: 60px;
+    height: 60px;
     border-radius: 100px;
     border:4px solid var(--btn-color);
     background-color: var(--search-bar-color);
     background-image: url(../image/cloud.jpg);
+    margin: 8px 0px;
 }
 
 
